@@ -1,3 +1,8 @@
+2022-02-26 Gabriele Gorla <gorlik@yahoo.com>
+
+	* sdcc/sdas/asxxsrc/aslist.c:
+	  Revert changes in slew() which caused regression failures on z80 ports.
+
 2022-02-26 Sebastian 'basxto' Riedel <sdcc@basxto.de>
 
 	* sdas/asgb/gbmch.:
